# langgraph-agent-studio

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml
agent-chat-ui/: README.md  package-lock.json
graph_src_v2/: .env.example  ARCHITECTURE.md  langgraph.json  langgraph_auth.json
graph_src_v2/agents/: README.md  __init__.py
graph_src_v2/agents/assistant_agent/: __init__.py  graph.py  graph_entrypoint.py  (+2 more)
graph_src_v2/auth/: __init__.py  provider.py
graph_src_v2/conf/: settings.py  settings.yaml.example
graph_src_v2/custom_routes/: app.py  models.py  tools.py
graph_src_v2/docs/: 01-auth-and-sdk-validation.md  02-runnableconfig-vs-serverruntime.md  03-agent-development-playbook.md  04-agent-scaffold-templates.md  05-template-to-runnable-agent-10min.md  06-multimodal-middleware-design.md  README.md
graph_src_v2/mcp/: __init__.py  loader.py  local_math_server.py  local_text_server.py  servers.py
graph_src_v2/middlewares/: __init__.py  multimodal.py
graph_src_v2/runtime/: __init__.py  context.py  modeling.py  options.py
graph_src_v2/tests/: test_assistant_langchain_concepts_tools.py  test_auth_core.py  test_custom_routes.py  test_customer_support_tools.py  test_deepagents_data_analysis_demo.py  test_graph_patterns_memory_demo.py  test_langgraph_graph_descriptions.py  test_model_smoke.py  test_models_catalog.py  test_multimodal_middleware.py  test_no_nested_ainvoke_demo.py  test_personal_assistant_tools.py  test_router_knowledge_base_tools.py  test_skills_sql_assistant_tools.py
graph_src_v2/tools/: __init__.py  local.py  registry.py
(+30 files in other folders)
